fix: align overflow text of list

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -68,20 +68,25 @@
 .nuxt-content {
   & > ul,
   & > ol {
-    @apply mb-4;
+    /* overall margins of one list block */
+    @apply mb-4 ml-4;
   }
+}
+
+.nuxt-content ul {
+  @apply list-disc list-outside;
+}
+
+.nuxt-content ol {
+  @apply list-decimal list-outside;
 }
 
 .nuxt-content li {
   @apply ml-6;
 }
 
-.nuxt-content ul {
-  @apply list-disc list-inside;
-}
-
-.nuxt-content ol {
-  @apply list-decimal list-inside;
+.nuxt-content input[type="checkbox"] {
+  @apply mr-1;
 }
 
 /* BLOCK QUOTE */
